--- a/web/app/views/events/_form.html.erb
+++ b/web/app/views/events/_form.html.erb
@@ -54,7 +54,7 @@
   <div class="me-text-field__container me-text-field--fullwidth">
     <div class="mdc-select mdc-select--outlined">
       <i class="mdc-select__dropdown-icon"></i>
-      <%= form.select(:personas_primary_name, ["aventureiro", "cult", "geek", "hipster", "praieiro", "turista", "underground", "zeen"], {}, { class: "mdc-select__native-control"} ) %>
+      <%= form.select(:personas_primary_name, ["", "aventureiro", "cult", "geek", "hipster", "praieiro", "turista", "underground", "zeen"], {}, { class: "mdc-select__native-control"} ) %>
       <div class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched">
         <div class="mdc-notched-outline__leading"></div>
         <div class="mdc-notched-outline__notch" style="width: 32.75px;">
