Add fast way to retrain events

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -52,13 +52,14 @@ font-weight: 100
 @import "@material/top-app-bar/mdc-top-app-bar";
 @import "@material/icon-button/mdc-icon-button";
 @import "@material/drawer/mdc-drawer";
-@import "@material/list/mdc-list";
 @import "@material/textfield/mdc-text-field";
 @import "@material/select/mdc-select";
 @import "@material/form-field/mdc-form-field";
 @import "@material/checkbox/mdc-checkbox";
+@import "@material/list/mdc-list";
+@import "@material/menu-surface/mdc-menu-surface";
+@import "@material/menu/mdc-menu";
 @import "components/me-components";
-
 
 
 
