--- a/web/app/views/feeds/train.html.erb
+++ b/web/app/views/feeds/train.html.erb
@@ -82,4 +82,12 @@
   <%= render partial: "section", locals: { events: @events[:aventureiro], title: "Eventos para aventureiro", type: :large} unless @events[:aventureiro].empty? %>
   <%= render partial: "section", locals: { events: @events[:turista], title: "Eventos para turista", type: :large} unless @events[:turista].empty? %>
   <%= render partial: "section", locals: { events: @events[:zeen], title: "Eventos para zeen", type: :large} unless @events[:zeen].empty? %>
+  <%= render partial: "section", locals: { events: @events[:festa], title: "festa", type: :large} unless @events[:festa].empty? %>
+  <%= render partial: "section", locals: { events: @events[:show], title: "show", type: :large} unless @events[:show].empty? %>
+  <%= render partial: "section", locals: { events: @events[:teatro], title: "teatro", type: :large} unless @events[:teatro].empty? %>
+  <%= render partial: "section", locals: { events: @events[:curso], title: "curso", type: :large} unless @events[:curso].empty? %>
+  <%= render partial: "section", locals: { events: @events[:cinema], title: "cinema", type: :large} unless @events[:cinema].empty? %>
+  <%= render partial: "section", locals: { events: @events[:exposicao], title: "exposicao", type: :large} unless @events[:exposicao].empty? %>
+  <%= render partial: "section", locals: { events: @events[:feira], title: "feira", type: :large} unless @events[:feira].empty? %>
+  <%= render partial: "section", locals: { events: @events[:aventura], title: "aventura", type: :large} unless @events[:aventura].empty? %>
 </div>
