Add simple filter to events in feed

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -59,6 +59,7 @@ font-weight: 100
 @import "@material/list/mdc-list";
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/menu/mdc-menu";
+@import "@material/chips/mdc-chips";
 @import "components/me-components";
 
 
