--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
         <a href="<%= @event.url %>/edit">Editar</a>
         <a href="/train">Treinar</a>
 
-        <div class="me-card mdc-card event-<%= @event.id %>" data-controller="event" data-target="event.event" data-event-favorited="<%= current_user.taste_events_saved?(@event.id) if current_user %>" data-event-identifier="<%= @event.id %>">
+        <div class="me-card mdc-card event-<%= @event.id %>" data-controller="event" data-target="event.event" data-event-favorited="<%= current_user and current_user.taste_events_saved?(@event.id) if current_user and current_user %>" data-event-identifier="<%= @event.id %>">
           <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= @event.cover_url %>')">
           </div>
 
@@ -34,7 +34,7 @@
 
           <div class="me-card__like-button" data-action="click->event#like">
             <div data-target="event.like">
-              <button data-target="event.likeButton" id="add-to-favorites" class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>" aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
+              <button data-target="event.likeButton" id="add-to-favorites" class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user and current_user.taste_events_saved?(@event.id) %>" aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
                 <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
                 <i class="material-icons mdc-icon-button__icon">star_border</i>
               </button>
