--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -71,13 +71,49 @@
 
 
 <div class="me-feed">
+
+  <div class="me-filter">
+    <div data-controller="chip" data-target="chip.chipContainer" class="mdc-chip-set mdc-chip-set--filter">
+      <% ["aventureiro", "cult", "geek", "hipster", "praieiro", "turista", "underground", "zeen"].each do |persona| %>
+        <div data-target="chip.chip" data-action="click->chip#select" class="mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
+          <div class="mdc-chip__checkmark" >
+            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+          </div>
+          <div class="mdc-chip__text">
+            <%= persona.capitalize %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div data-controller="chip" data-target="chip.chipContainer" class="mdc-chip-set mdc-chip-set--filter">
+      <% ["festa", "curso", "teatro", "show", "cinema", "exposição", "feira", "aventura", "meetup", "hackaton", "palestra", "celebração", "workshop", "oficina", "aula de dança", "literatura", "festival", "acadêmico", "gastronômico", "brecho", "profissional"].each do |category| %>
+        <div data-target="chip.chip" class="mdc-chip">
+          <div class="mdc-chip__checkmark" >
+            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+          </div>
+          <div class="mdc-chip__text">
+            <%= category.capitalize %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
   <div id="indicados" class="me-feed__section">
     <%= render partial: "section", locals: { events: @events[:user], title: "Eventos indicados para você", type: :large } unless @events[:user].empty? %>
   </div>
-  <div class="me-feed__section">
+  <%
+=begin%>
+ <div class="me-feed__section">
     <%= render partial: "section", locals: { events: @events[:show], title: "Shows que talvez você goste", type: :small } unless @events[:show].empty? %>
   </div>
   <div class="me-feed__section">
     <%= render partial: "section", locals: { events: @events[:party], title: "Festas que talvez você goste", type: :small } unless @events[:party].empty? %>
-  </div>
+  </div> 
+<%
+=end%>
 </div>
