Create dynamic filter for suggestions in feed

--- a/web/app/assets/stylesheets/components/me-components.scss
+++ b/web/app/assets/stylesheets/components/me-components.scss
@@ -11,3 +11,6 @@
 @import "me-top-app-bar";
 @import "me-text-field";
 @import "me-select";
+@import "me-filter";
+@import "me-chip";
+@import "me-chip-set";
