--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -31,8 +31,8 @@
 <br><br> -->
 
 
-<% if current_user and !current_user.taste_events_saved.empty? %>
 <div id="salvos" class="me-favorite" data-controller="favorite">
+<% if current_user and !current_user.taste_events_saved.empty? %>
   <h2 data-target="favorite.header" class="mdc-typography--headline2">
     Eventos salvos
   </h2>
@@ -65,46 +65,14 @@
     </div>
   </div>
 
-</div>
 <% end %>
+</div>
 
 
 
 <div class="me-feed">
-
-  <div class="me-filter">
-    <div data-controller="chip" data-target="chip.chipContainer" class="mdc-chip-set mdc-chip-set--filter">
-      <% ["aventureiro", "cult", "geek", "hipster", "praieiro", "turista", "underground", "zeen"].each do |persona| %>
-        <div data-target="chip.chip" data-action="click->chip#select" class="mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
-          <div class="mdc-chip__checkmark" >
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text">
-            <%= persona.capitalize %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-    <div data-controller="chip" data-target="chip.chipContainer" class="mdc-chip-set mdc-chip-set--filter">
-      <% ["festa", "curso", "teatro", "show", "cinema", "exposição", "feira", "aventura", "meetup", "hackaton", "palestra", "celebração", "workshop", "oficina", "aula de dança", "literatura", "festival", "acadêmico", "gastronômico", "brecho", "profissional"].each do |category| %>
-        <div data-target="chip.chip" class="mdc-chip">
-          <div class="mdc-chip__checkmark" >
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text">
-            <%= category.capitalize %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
   <div id="indicados" class="me-feed__section">
-    <%= render partial: "section", locals: { events: @events[:user], title: "Eventos indicados para você", type: :large } unless @events[:user].empty? %>
+    <%= render partial: "recomendations", locals: { events: @events[:user], title: "Eventos recomendados para", type: :large } %>
   </div>
   <%
 =begin%>
