Adjust in geocoder of city and neighborhood

--- a/web/app/views/feeds/_recomendations.html.erb
+++ b/web/app/views/feeds/_recomendations.html.erb
@@ -5,6 +5,8 @@
 
 <h2 class="mdc-typography--<%= type == :large ? 'headline1' : 'headline2' %>">
 
+  Eventos recomendados para 
+
   <div data-controller="filter" data-target="filter.filterContainer" class="me-filter">
     <div data-controller="chip" data-chip-type="personas" data-target="chip.chipContainer filter.personas" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
       
