--- a/web/app/views/feeds/_recomendations.html.erb
+++ b/web/app/views/feeds/_recomendations.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<% if current_user && current_user.personas_assortment_finished? %>
 <h2 class="mdc-typography--<%= type == :large ? 'headline1' : 'headline2' %>">
     Eventos recomendados para você 
 <% else %>
@@ -40,7 +40,27 @@
         </div>
       <% end %>
     </div>
-  </div>.
+
+  acontecendo
+
+    <div data-controller="chip" data-chip-type="ocurrences" data-target="chip.chipContainer filter.ocurrences" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+      <% ['hoje', 'amanhã'].each do |ocurrence| %>
+        <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:ocurrences] and params[:ocurrences].include?(ocurrence) ? 'mdc-chip--selected' : nil %>">
+          <div class="mdc-chip__checkmark" >
+            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+          </div>
+          <div class="mdc-chip__text">
+            <%= ocurrence.capitalize %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+
+  </div>
+  
 </h2>
 
 <% end %>
