--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -1,69 +1,66 @@
-<% if current_user && current_user.personas_assortment_finished? %>
-<h2 class="mdc-typography--<%= type == :large ? 'headline1' : 'headline2' %>">
-    Eventos recomendados para você 
-<% else %>
+
 
 <h2 class="mdc-typography--<%= type == :large ? 'headline1' : 'headline2' %>">
-
-  Eventos recomendados para 
-
-  <div data-controller="filter" data-target="filter.filterContainer" class="me-filter">
-    <div data-controller="chip" data-chip-type="personas" data-target="chip.chipContainer filter.personas" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-      
-      <% Event.active.collect(&:personas_primary_name).uniq.each do |persona| %>
-        <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
-          <div class="mdc-chip__checkmark" >
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text">
-            <%= persona.capitalize %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-
-    nas categorias 
-
-    <div data-controller="chip" data-chip-type="categories" data-target="chip.chipContainer filter.categories" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-      <% Event.with_personas(params[:personas]).collect(&:categories_primary_name).uniq.each do |category| %>
-        <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:categories] and params[:categories].include?(category) ? 'mdc-chip--selected' : nil %>">
-          <div class="mdc-chip__checkmark" >
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text">
-            <%= category.capitalize %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-
-  acontecendo
-
-    <div data-controller="chip" data-chip-type="ocurrences" data-target="chip.chipContainer filter.ocurrences" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-      <% ['hoje', 'amanhã'].each do |ocurrence| %>
-        <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:ocurrences] and params[:ocurrences].include?(ocurrence) ? 'mdc-chip--selected' : nil %>">
-          <div class="mdc-chip__checkmark" >
-            <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-              <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-            </svg>
-          </div>
-          <div class="mdc-chip__text">
-            <%= ocurrence.capitalize %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-
-
-  </div>
+  <%= title %>
   
+  <% if filters %>
+    <div data-controller="filter" data-target="filter.filterContainer" class="me-filter">
+      <% if filters[:personas] %>
+        <div data-controller="chip" data-chip-type="personas" data-target="chip.chipContainer filter.personas" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+          <% Event.active.collect(&:personas_primary_name).uniq.each do |persona| %>
+            <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
+              <div class="mdc-chip__checkmark" >
+                <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+                  <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+                </svg>
+              </div>
+              <div class="mdc-chip__text">
+                <%= persona.capitalize %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+
+      <% if filters[:categories] %>
+        nas categorias 
+        <div data-controller="chip" data-chip-type="categories" data-target="chip.chipContainer filter.categories" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+          <% Event.with_personas(params[:personas]).collect(&:categories_primary_name).uniq.each do |category| %>
+            <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:categories] and params[:categories].include?(category) ? 'mdc-chip--selected' : nil %>" data-turbolinks-scroll="false">
+              <div class="mdc-chip__checkmark" >
+                <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+                  <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+                </svg>
+              </div>
+              <div class="mdc-chip__text">
+                <%= category.capitalize %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+ 
+      <% if filters[:occurences] %>
+        acontecendo
+        <div data-controller="chip" data-chip-type="ocurrences" data-target="chip.chipContainer filter.ocurrences" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+          <% ['hoje', 'amanhã'].each do |ocurrence| %>
+            <div data-target="chip.chip" data-action="click->chip#select" class="me-chip mdc-chip <%= params[:ocurrences] and params[:ocurrences].include?(ocurrence) ? 'mdc-chip--selected' : nil %>" data-turbolinks-scroll="false">
+              <div class="mdc-chip__checkmark" >
+                <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+                  <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+                </svg>
+              </div>
+              <div class="mdc-chip__text">
+                <%= ocurrence.capitalize %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+   <% end %>  
 </h2>
 
-<% end %>
 
 <div class="me-feed__divider"></div>
 
